--- a/public/admin.html
+++ b/public/admin.html
@@ -11,6 +11,9 @@
    <div id="root">
        
    </div>
+   <div id="form">
+    
+   </div>
     <!-- Our JavaScript Code  -->
     <script src="admin.js"></script>
 </body>
